﻿0.1.2 [TBD]
[+] EnumExtensions.GetDescription for .NET 4.0 .

0.1.1 [2016-12-16]
[+] FlowUtils.RetryAsync now uses ConfigureAwait false to call action.
[+] FlowUtils.RetryAsync now throws exception if retry limit is reached.
[*] Make DateTimeUtils.Range function public.
[*] Remove dependency System.Data.Common and some other extra dependencies.
[+] Add support for .NET Core 1.1, .NET Standard 1.2 .
[+] DictionaryExtensions.GetValueDefault now has defaultValue as default(TValue).
[+] Add support for .NET 4.0 .

0.1.0 [2016-11-13]
[+] Initial release.