@@ -60,8 +60,15 @@ Middlewares
 
     .. class:: QueryExecutorMiddleware
 
-        Executes query delegate. Included in default pipeline.
+        Executes query delegate. Included in default pipeline. Id is ``QueryExecutor``.
 
     .. class:: QueryObjectResolverMiddleware
 
-        Resolve object handler for query. Included in default pipeline.
+        Resolve object handler for query. Included in default pipeline. Id is ``QueryResolver``.
+
+Default Pipeline
+----------------
+
+    ::
+
+        QueryObjectResolverMiddleware [QueryResolver] ---> QueryExecutorMiddleware [QueryExecutor]
