@@ -19,6 +19,8 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Saritasa.Tools.NLog4", "..\
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Saritasa.Tools.Messages.Abstractions", "..\..\src\Saritasa.Tools.Messages.Abstractions\Saritasa.Tools.Messages.Abstractions.csproj", "{E16B2300-A1D4-49BB-B3FC-C2891E7D1177}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Saritasa.Tools.Common", "..\..\src\Saritasa.Tools.Common\Saritasa.Tools.Common.csproj", "{2900D88A-2522-4299-8D51-6AF26B74C91C}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -49,6 +51,10 @@ Global
 		{E16B2300-A1D4-49BB-B3FC-C2891E7D1177}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{E16B2300-A1D4-49BB-B3FC-C2891E7D1177}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{E16B2300-A1D4-49BB-B3FC-C2891E7D1177}.Release|Any CPU.Build.0 = Release|Any CPU
+		{2900D88A-2522-4299-8D51-6AF26B74C91C}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{2900D88A-2522-4299-8D51-6AF26B74C91C}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{2900D88A-2522-4299-8D51-6AF26B74C91C}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{2900D88A-2522-4299-8D51-6AF26B74C91C}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -60,5 +66,6 @@ Global
 		{32A3A81C-A65C-4F78-8300-17151987697C} = {CBCC092D-4EF0-4F85-B377-0565A819E948}
 		{83D4925B-B04F-4C9C-8BF1-9B6A6BE0A87D} = {CBCC092D-4EF0-4F85-B377-0565A819E948}
 		{E16B2300-A1D4-49BB-B3FC-C2891E7D1177} = {CBCC092D-4EF0-4F85-B377-0565A819E948}
+		{2900D88A-2522-4299-8D51-6AF26B74C91C} = {CBCC092D-4EF0-4F85-B377-0565A819E948}
 	EndGlobalSection
 EndGlobal
