@@ -12,6 +12,7 @@ using Saritasa.Tools.Messages.Queries.PipelineMiddlewares;
 using SandBox.Commands;
 using SandBox.Events;
 using SandBox.Queries;
+using Saritasa.Tools.Common.Extensions;
 
 namespace SandBox
 {
