@@ -21,29 +21,9 @@ namespace Saritasa.Tools.Common.Extensions
         }
 
         /// <summary>
-        /// Returns begin of month for specified date.
+        /// Date/time period types.
         /// </summary>
-        /// <param name="target">The date to get year and month.</param>
-        /// <returns>Begin of month date.</returns>
-        public static DateTime BeginOfMonth(this DateTime target)
-        {
-            return new DateTime(target.Year, target.Month, 1);
-        }
-
-        /// <summary>
-        /// Returns end of month for specified date.
-        /// </summary>
-        /// <param name="target">The date to get year and month.</param>
-        /// <returns>End of month date.</returns>
-        public static DateTime EndOfMonth(this DateTime target)
-        {
-            return target.AddMonths(1).AddMilliseconds(-1);
-        }
-
-        /// <summary>
-        /// Date trancation types.
-        /// </summary>
-        public enum DateTimeTruncation
+        public enum DateTimePeriod
         {
             /// <summary>
             /// Do not trancate.
@@ -51,55 +31,91 @@ namespace Saritasa.Tools.Common.Extensions
             None,
 
             /// <summary>
-            /// Trancate by seconds: 2016-03-06 07:05:23 -> 2016-01-01 07:05:00.
+            /// Trancate by seconds: 2016-03-08 07:05:23 -> 2016-01-01 07:05:00.
             /// </summary>
             Seconds,
 
             /// <summary>
-            /// Trancate by minutes: 2016-03-06 07:05:23 -> 2016-01-01 07:00:00.
+            /// Trancate by minutes: 2016-03-08 07:05:23 -> 2016-01-01 07:00:00.
             /// </summary>
             Minutes,
 
             /// <summary>
-            /// Trancate by hours: 2016-03-06 07:05:23 -> 2016-01-01 00:00:00.
+            /// Trancate by hours: 2016-03-08 07:05:23 -> 2016-01-01 00:00:00.
             /// </summary>
             Hours,
 
             /// <summary>
-            /// Trancate by days: 2016-03-06 07:05:23 -> 2016-03-00 00:00:00.
+            /// Trancate by days: 2016-03-08 07:05:23 -> 2016-03-01 00:00:00.
             /// </summary>
             Days,
 
             /// <summary>
-            /// Trancate by months: 2016-03-06 07:05:23 -> 2016-00-00 00:00:00.
+            /// Trancate by weeks: 2016-03-08 07:05:23 -> 2016-03-06 00:00:00. First day of week
+            /// depends on current thread culture.
             /// </summary>
-            Months
+            Weeks,
+
+            /// <summary>
+            /// Trancate by months: 2016-03-08 07:05:23 -> 2016-03-01 00:00:00.
+            /// </summary>
+            Months,
+
+            /// <summary>
+            /// Trancate by quarters: 2016-03-08 07:05:23 -> 2016-01-01 00:00:00.
+            /// </summary>
+            Quarters,
+
+            /// <summary>
+            /// Trancate by years: 2016-03-08 07:05:23 -> 2016-01-01 00:00:00.
+            /// </summary>
+            Years,
         }
 
         /// <summary>
-        /// Truncates date.
+        /// Truncates date. Begin of period.
         /// </summary>
-        /// <param name="date">Target date/</param>
-        /// <param name="truncation">Type of truncation.</param>
+        /// <param name="target">Target date.</param>
+        /// <param name="period">Type of truncation.</param>
         /// <returns>Truncated date.</returns>
-        public static DateTime Truncate(this DateTime date, DateTimeTruncation truncation)
+        public static DateTime Truncate(this DateTime target, DateTimePeriod period)
         {
-            switch (truncation)
+            switch (period)
             {
-                case DateTimeTruncation.Seconds:
-                    return new DateTime(date.Year, date.Month, date.Day, date.Hour, date.Minute, 0, date.Kind);
-                case DateTimeTruncation.Minutes:
-                    return new DateTime(date.Year, date.Month, date.Day, date.Hour, 0, 0, date.Kind);
-                case DateTimeTruncation.Hours:
-                    return new DateTime(date.Year, date.Month, date.Day, 0, 0, 0, date.Kind);
-                case DateTimeTruncation.Days:
-                    return new DateTime(date.Year, date.Month, 1, 0, 0, 0, date.Kind);
-                case DateTimeTruncation.Months:
-                    return new DateTime(date.Year, 1, 1, 0, 0, 0, date.Kind);
-                case DateTimeTruncation.None:
+                case DateTimePeriod.Seconds:
+                    return new DateTime(target.Year, target.Month, target.Day, target.Hour, target.Minute, 0, target.Kind);
+                case DateTimePeriod.Minutes:
+                    return new DateTime(target.Year, target.Month, target.Day, target.Hour, 0, 0, target.Kind);
+                case DateTimePeriod.Hours:
+                    return new DateTime(target.Year, target.Month, target.Day, 0, 0, 0, target.Kind);
+                case DateTimePeriod.Days:
+                    return new DateTime(target.Year, target.Month, 1, 0, 0, 0, target.Kind);
+                case DateTimePeriod.Weeks:
+                    return new DateTime(target.Year, target.Month, target.Day, 0, 0, 0, target.Kind)
+                        .AddDays(-(int)target.DayOfWeek);
+                case DateTimePeriod.Months:
+                    return new DateTime(target.Year, 1, 1, 0, 0, 0, target.Kind);
+                case DateTimePeriod.Quarters:
+                    return new DateTime(target.Year, target.Month, 1, 0, 0, 0, target.Kind)
+                        .AddMonths(-(target.Month - 1) % 3);
+                case DateTimePeriod.Years:
+                    return new DateTime(target.Year, 1, 1, 0, 0, 0, target.Kind);
+                case DateTimePeriod.None:
                 default:
-                    return date;
+                    return target;
             }
+        }
+
+        /// <summary>
+        /// Is date between two startDate and endDate dates.
+        /// </summary>
+        /// <param name="date">Date to compare.</param>
+        /// <param name="startDate">Start date.</param>
+        /// <param name="endDate">End date.</param>
+        /// <returns>True if date between startDate and endDate, False otherwise.</returns>
+        public static bool IsBetween(this DateTime date, DateTime startDate, DateTime endDate)
+        {
+            return date >= startDate && date <= endDate;
         }
     }
 }
